--- a/src/screens/Inscription/inscription.css
+++ b/src/screens/Inscription/inscription.css
@@ -4,13 +4,17 @@
     top: 10%;
     width: 80%;
     margin-top: 80px;
+
+}
+
+.container_form_inscription h1{
+    margin-left: 135px;
 }
 
 .form_inscription{
-    display: flex;
-    flex: space-around;
+
     flex-wrap: wrap;
-    padding: 4%;
+    padding: 2% 4%;
     border: none;
     background: #fff;
     box-shadow: none;
@@ -20,6 +24,9 @@
     font-size: 35px;
 }
 
+.form_inscription table{
+    margin: 0 auto;
+}
 td{
     padding: 8px 30px 0px 30px;
     width: 50%;
