--- a/src/screens/css_general.css
+++ b/src/screens/css_general.css
@@ -71,6 +71,7 @@ button{
     position: fixed;
     width: 100%;
     top: 0px;
+    z-index: 90;
 }
 
 /*input*/
@@ -91,3 +92,10 @@ input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, inp
     margin: 12px 0;
 }
 
+.annonces_div_general{
+    height: 150px;
+    border-radius: 15px;
+    display: flex;
+    box-shadow: 0 0 15px 0 #999999, 0 2px 2px 0 #9a9a9a;
+    margin-bottom: 15px;
+}
