--- a/src/Components/components_annonces/prix_annonces.css
+++ b/src/Components/components_annonces/prix_annonces.css
@@ -10,11 +10,11 @@
     width: 80px;
     height: 40px;
     margin-top: 7px;
-    padding-top: 1px;
     padding-left: 3px;
+    padding-top: 1px;
 }
 .text_contrepartie{
-    font-size: x-small;
+    font-size: xx-small;
     line-height: 1px;
 }
 .text_prix{
