--- a/src/screens/Accueil/accueil.css
+++ b/src/screens/Accueil/accueil.css
@@ -1,6 +1,3 @@
-.page{
-    height: 100vh;
-}
 
 button{
     border: none;
@@ -10,45 +7,39 @@ button{
 
 /*zone du milieu*/
 .zone2 {
-    height: 65vh;
-    min-width: 687px;
-    margin : 0;
-    position : relative;
     background: url("/public/images/avion.png") no-repeat;
     background-size: 100%;
     margin-top: 70px;
+    height: 65vh;
+    min-width: 687px;
+    min-height: 400px;
+    display: flex;
 }
-
 .block {
     width: 60%;
-    min-width: 420px;
+    min-width: 600px;
     min-height: 130px;
     height: 40%;
-    display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 0;
     left: 20%;
+    font-size: x-large;
     padding-bottom: 1% ;
-    margin-bottom: 20px;
     margin: auto;
+    margin-top: 240px;
 }
 /*slogan*/
 .slogan{
     width: 80%;
-    min-width: 410px;
+    min-width: 600px;
     height: 70px;
-    left: 10%;
     top :10%;
-    font-size: x-large;
     font-weight: bold;
-    display: inline-block;
     margin: auto;
 }
-.tab_slogan{
-    width: 85%;
-    color: #7ec9ca;
+.tab_slogan td{
+    max-height: 85%;
+    height: 50px;
+    line-height: 0px;
 }
 
 .point{
@@ -62,6 +53,7 @@ button{
 }
 
 .sloganBleuMarine{
+    font-size: 90%;
     color : #23445c;
 }
 /* zone connexion / inscription */
@@ -73,6 +65,9 @@ button{
     display: flex;
     justify-content: center;
     margin: auto;
+}
+#table_inscription_connexion td{
+    height: 50px;
 }
 .inscription{
     height: 35px;
