--- a/src/screens/Connexion/connexion.css
+++ b/src/screens/Connexion/connexion.css
@@ -6,13 +6,14 @@
 .container_form {
     width: 40%;
     height: 40%;
-    margin: 0 auto;
+    margin: auto;
     position: relative;
     top: 30%;
     display: block;
 }
 
 form {
+    margin-top: 110px;
     width: 90%;
     padding: 5%;
     border: 1px solid #f1f1f1;
@@ -22,7 +23,7 @@ form {
 
 .container_form h1 {
     width: 38%;
-    margin: 0 auto;
+    margin: auto;
     padding-bottom: 10px;
 }
 
