Annonces en cours

--- a/src/Components/annonces_vue_voyageur/annonces_vue_voyageur.css
+++ b/src/Components/annonces_vue_voyageur/annonces_vue_voyageur.css
@@ -6,3 +6,8 @@
     box-shadow: 0 0 15px 0 #999999, 0 2px 2px 0 #9a9a9a;
     margin-bottom: 15px;
 }
+
+#div_autour_photo_1{
+    width: 160px;
+    height: 150px;
+}
