--- a/src/Components/annonces_urgentes/annonces_urgentes.css
+++ b/src/Components/annonces_urgentes/annonces_urgentes.css
@@ -6,3 +6,8 @@
     box-shadow: 0 0 15px 0 #999999, 0 2px 2px 0 #9a9a9a;
     margin-bottom: 15px;
 }
+
+#autour_photo{
+    height: 115px;
+    width: 125px;
+}
