--- a/src/Components/components_achats_voyages/actions.css
+++ b/src/Components/components_achats_voyages/actions.css
@@ -12,13 +12,33 @@
     margin-right: 6px;
 }
 
+#bouton_3pt{
+    border-radius: 50px;
+    background-color: #6FB9F3;
+    color: white;
+    padding-top: 0;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+    margin-top: 10px;
+}
 
-p span{
+/*#span_text_produit{
+    margin-top: 10px;
+    padding-top: 10px;
+    border: solid;
+}/*
+
+.icon{
+    font-size: large;
+}
+
+/*p span{
     background: #6FB9F3;
     margin-right: 5px;
     border-radius: 9999999px;
     width: 10px;
-}
+}*/
 .logo{
     color: white;
 }
