--- a/src/Components/components_achats_voyages/produit.css
+++ b/src/Components/components_achats_voyages/produit.css
@@ -1,6 +1,14 @@
+#div_autour_photo{
+    width: 160px;
+    height: 150px;
+    min-width: 160px;
+    min-height: 150px;
+}
+
 .produit_container{
-    width: 35%;
+    width: 40%;
     height: 100%;
+    min-width: 355px;
     border-right: dashed;
     display: flex;
 }
@@ -14,9 +22,11 @@
 #description_achatsVoyages{
     width: 65%;
     height: 100%;
-   /* border: solid blue;*/
     padding: 3px 10px;
     position: relative;
+}
+#titre_profil{
+    margin-bottom: 10px;
 }
 .informationProduits{
     font-size: 8px;
@@ -32,9 +42,9 @@
 }
 
 .nomPrenom{
-    position: fixed;
-    top: 187px;
+    margin-bottom: 5px;
 }
+
 .logo_lieu_vente{
     margin-left: 6px;
     margin-right: 5px;
@@ -45,23 +55,18 @@
     margin-right: 6px;
 }
 
-.nomAcheteur, .nomTransporteur{
-    color: #035583;
-    text-decoration: underline;
-}
-
-.nomAcheteur{
-    margin-right: 80px;
-}
-
-.nomsActeurs{
-    height: 40px;
+.div_nomsActeur{
+    height: 30px;
+    min-width: 250px;
     display: flex;
-
     padding: 0 5px;
 }
-
-.nomsActeurs span{
+.titre_nom{
+    margin-top: 2px;
+    margin-right: 40px;
+    color: #035583;
+}
+/*.nomsActeurs span{
     background-color: #035583;
     border-radius: 99999px;
     margin-right: 8px;
@@ -77,7 +82,7 @@
     margin-right: 8px;
     padding-left: 2.5px;
     border: solid;
-}
+}*/
 .logo{
     color: white;
 }
