--- a/src/Components/components_annonces/photo_annonces.css
+++ b/src/Components/components_annonces/photo_annonces.css
@@ -1,20 +1,28 @@
 /* partie photo*/
 .div_photo{
-    width: 30%;
+    width: 100%;
     height: 100%;
     border-radius: 15px;
     background: url("/public/images/ordi.png") no-repeat;
     background-size: 100%;
-    BORDER : solid;
 }
 .boutons_photo{
     background-color: #FF8802;
     color: white;
     border-radius: 10px;
     margin-top: 75% ;
-    margin-left: 7%;
-    margin-right: 7%;
+    margin-left: 10%;
     height: 20px;
-    min-width: 30px;
+    width: 55px;
+
+}
+.annonces_urgentes{
+    background-color: #FF8802;
+    color: white;
+    border-radius: 10px;
+    margin-top: 70% ;
+    margin-left: 5%;
+    height: 20px;
+    width: 55px;
 
 }
