--- a/src/Components/components_mon_annonce/produit_mon_annonce.css
+++ b/src/Components/components_mon_annonce/produit_mon_annonce.css
@@ -8,15 +8,9 @@
 .produit_container{
     width: 40%;
     height: 100%;
-    min-width: 355px;
+    min-width: 400px;
     border-right: dashed;
     display: flex;
-}
-
-.images_achatsVoyages{
-    height: 100%;
-    border: solid red;
-    width: 120px;
 }
 
 #description_achatsVoyages{
@@ -30,15 +24,33 @@
 }
 .informationProduits{
     font-size: 8px;
+    height: 78px;
+    padding-top: 0px;
+}
+#div_profil{
+    display: flex;
+    margin-top: 0px ;
+    margin-left: 0px;
+}
+.text_lieu{
+    font-size: small;
 }
 
 .PhotoProfilComponentProduit{
     border-radius: 100%;
-    padding: 5px;
     border: solid;
-    height: 12px;
-    width: 12px;
+    padding: 5px;
+    height: 10px;
+    width: 10px;
     margin-right: 5px;
+}
+
+#button_img_profil{
+    border-radius: 50%;
+    border: solid;
+    padding: 0px;
+    height: 30px;
+    width: 30px;
 }
 
 .nomPrenom{
@@ -62,27 +74,18 @@
     padding: 0 5px;
 }
 .titre_nom{
-    margin-top: 2px;
+    margin-top: 0px;
+    margin-left: 5px;
     margin-right: 40px;
     color: #035583;
+    line-height: 15px;
 }
-/*.nomsActeurs span{
-    background-color: #035583;
-    border-radius: 99999px;
-    margin-right: 8px;
-    line-height: 8px;
-    border: solid;
+#bouton_valise{
+    padding-left: 8px;
+    padding-right: 8px;
 }
-.nomsActeurs div{
+.bouton_logo{
+    border-radius: 50%;
+    color: #fcfcfc;
     background-color: #035583;
-    border-radius: 99999px;
-    display: inline-block;
-    height: 21px;
-    width: 20px;
-    margin-right: 8px;
-    padding-left: 2.5px;
-    border: solid;
-}*/
-.logo{
-    color: white;
 }
