--- a/src/screens/CreerUneAnnonce/3creerUneAnnonce.css
+++ b/src/screens/CreerUneAnnonce/3creerUneAnnonce.css
@@ -2,10 +2,15 @@
     display: flex;
 }
 
+#avancement{
+    min-width: 220px;
+}
+
 #wrapperPageCreationAnnonce3{
     padding-top: 90px;
     padding-left: 70px;
     width: 80%;
+    min-width: 800px;
 }
 
 #wrapperPageCreationAnnonce3 h1{
@@ -56,6 +61,7 @@
 
 #divCommission div{
     width: 33%;
+    min-width: 250px;
     height: 100%;
 }
 
