--- a/src/Components/navBar/navbar.css
+++ b/src/Components/navBar/navbar.css
@@ -8,6 +8,15 @@
     display: flex;
 }
 
+/*groupes de bouttons*/
+.nav{
+    width: 450px;
+    height: 70px;
+    position: absolute;
+    top:0;
+    right: 0px;
+}
+
 /* Logo en haut a gache*/
 .Logo{
     height: 65px;
@@ -17,14 +26,6 @@
 
 .imageLogo{
     height: 65px;
-}
-
-/*groupes de bouttons*/
-.nav{
-    width: 450px;
-    height: 70px;
-    position: absolute;
-    right: 0px;
 }
 
 .nav button{
@@ -76,18 +77,29 @@
     background-color:transparent;
 }
 
+
 .fleche{
     margin-left: 6px;
     transition: transform 200ms;
 }
 
 .annonces:hover{
-    height: 110px;
+    height: 70px;
     width: 120px;
     background-color: #fcfcfc;
     border-radius: 10px 10px 10px 10px;
     padding-left: 0;
     margin: 0;
+}
+
+.persone_co:hover{
+    height: 150px;
+    width: 120px;
+    background-color: #fcfcfc;
+    border-radius: 10px 10px 10px 10px;
+    padding-left: 0;
+    margin: 0;
+    color: black;
 }
 
 .annonces:hover .flecheAnnonces{
@@ -102,7 +114,7 @@
     position:absolute;
     top: 30px;
     padding-left: 5px;
-    width: 110px;
+    width: 100px;
     margin: 0;
     color:black;
 }
