--- a/src/screens/css_general.css
+++ b/src/screens/css_general.css
@@ -96,6 +96,17 @@ input[type=submit]:hover {
     transition: 150ms;
     cursor: pointer;
 }
+
+input[type=submit]{
+    background-color: #FF8802;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 5px;
+}
 /* bouton achatetvoyage & mes annonces */
 .bouton_logo{
     border-radius: 50%;
