--- a/src/Components/navBar/navbar.css
+++ b/src/Components/navBar/navbar.css
@@ -183,7 +183,7 @@
 
 .PhotoProfilNavBar{
         border-radius: 100%;
-        padding: 5px;
+        padding: 0;
         border: solid;
         height: 38px;
         width: 38px;
