--- a/src/screens/Annonces/annonces.css
+++ b/src/screens/Annonces/annonces.css
@@ -147,7 +147,7 @@
     width: 40px;
     border-radius: 5px;
 }
-.radio_input{
+.checkbox_input{
     margin-left: 10px;
 }
 /* SOUS-PARTIE : listes des Annonces */
