--- a/src/screens/CreerUneAnnonce/2creerUneAnnonce.css
+++ b/src/screens/CreerUneAnnonce/2creerUneAnnonce.css
@@ -24,7 +24,7 @@
     height: 120px;
     width: 80%;
     margin-top: 10px;
-    margin-left: 15%;
+    margin-left: 12%;
     padding: 5px;
     margin-top: 10px;
     padding-left: 15px;
@@ -39,13 +39,16 @@
     margin-left: 0;
 }
 
-
 #divDevise{
-    width: 40%;
+    width: 30%;
+    margin-right: 30px;
 }
 
 #divPrix{
-    width: 50%;
+    width: 30%;
+}
+#divDegImportance{
+    width: 30%;
 }
 
 #acheminementProduit{
