--- a/src/screens/css_general.css
+++ b/src/screens/css_general.css
@@ -115,5 +115,12 @@ input[type=submit]:hover {
     margin-top: 10px;
     line-height: 10px;
     margin-bottom: 10px;
+}
 
+.photoProfil{
+    border-radius: 100%;
+    padding: 5px;
+    height: 20px;
+    width: 20px;
+    padding: 0;
 }
