--- a/src/screens/Annonces/annonces.css
+++ b/src/screens/Annonces/annonces.css
@@ -17,17 +17,19 @@
 /* PARTIE : input de recherche géneral*/
 .div_recherche{
     height: 75px;
-    min-width: 920px;
+    min-width: 990px;
+    display: flex;
+    padding-left: 20px;
 }
 
 .b_type_voyage{
     color: #FF8802;
     height: 42px;
     width: 145px;
-    padding: 13px ;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 15px;
+    padding: 10px ;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
@@ -35,16 +37,32 @@
     border-radius: 5px;
     background: white;
 }
-#span_bouton{
-    margin-left: 7px;
-    margin-right: 7px;
+
+.p_titre{
+    margin-top: 3px;
 }
+
+.boutonChercher{
+    background-color: #FF8802;
+    color: white;
+    font-size: large;
+    border-radius: 30px;
+    display: inline-block;
+    height: 40px;
+    width: 90px;
+    margin-top: 20px;
+    margin-left: 20px;
+    border: none;
+}
+
 .titre_Recherche{
     color: #FF8802;
+    margin-top: 20px;
+    padding-top: 5px;
     height: 42px;
     width: 300px;
     padding-left: 10px;
-    display: inline-block;
+    display: flex;
     border: 1px solid #ccc;
     box-sizing: border-box;
     box-shadow: 2px 0 10px 0 #63B7E7, 0 2px 2px 0 #63B7E7;
@@ -53,9 +71,11 @@
 .titre_depart{
     color: #FF8802;
     height: 42px;
-    width: 215px;
+    width: 225px;
+    margin-top: 20px;
+    padding-top: 5px;
     padding-left: 7px;
-    display: inline-block;
+    display: flex;
     border: 1px solid #ccc;
     box-sizing: border-box;
     box-shadow: 0 0 10px 0 #63B7E7, 0 2px 2px 0 #63B7E7;
@@ -65,9 +85,11 @@
 .titre_arrive{
     color: #FF8802;
     height: 42px;
-    width: 215px;
+    width: 225px;
+    margin-top: 20px;
+    padding-top: 5px;
     padding-left: 5px;
-    display: inline-block;
+    display: flex;
     border: 1px solid #ccc;
     box-sizing: border-box;
     box-shadow: 2px 0 10px 0 #63B7E7, 0 2px 2px 0 #63B7E7;
@@ -77,11 +99,9 @@
 #depart {
     border-radius:  5px 0px 0px 5px;
 }
-.div_recherche{
-    padding-left: 20px;
-}
+
 .div_recherche .input_recherche{
-    width: 85%;
+    width: 250px;
     border-radius: 0px 0px 0px 0px;
     box-shadow: none;
     border: none;
@@ -107,6 +127,15 @@
     outline: none;
     box-shadow: none;
     margin: 0px 0px;
+}
+
+.div_recherche .b_type_voyage:focus{
+    outline: none;
+    padding: 10px ;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 25px;
+    display: inline-block;
 }
 
 .div_recherche .input_arrivé:focus{
