--- a/src/Components/components_admin/valide_annonces.css
+++ b/src/Components/components_admin/valide_annonces.css
@@ -1,25 +1,3 @@
-
-.div_general{
-    border-radius: 15px;
-    box-shadow: 0 0 15px 0 #999999, 0 2px 2px 0 #9a9a9a;
-    margin-bottom: 15px;
-    height: 320px;
-    padding: 15px;
-}
-
-
-
-.div_img{
-    height: 200px;
-    display: flex;
-}
-
-.img_id{
-    width: 300px;
-    height: 190px;
-    margin-right: 5px;
-}
-
 .boutonOK{
     background-color: #FF8802;
     color: white;
@@ -42,4 +20,14 @@
     margin-top: 10px;
     margin-left: 10px;
     border: none;
+}
+
+#div_general_V_annonces{
+    display: flex;
+    height: 170px;
+}
+
+#div_bouton_V_annonces{
+    width: 110px;
+
 }
