--- a/src/screens/Admin/admin.css
+++ b/src/screens/Admin/admin.css
@@ -6,6 +6,14 @@
 .div_validationCarte{
     margin-top: 10px;
     margin-left: 20px;
-    width: 500px;
-    height: 150px;
+    width: 650px;
+}
+
+.div_validationAnnonce{
+    margin-top: 10px;
+    margin-left: 60px;
+    padding-left: 40px;
+    width: 700px;
+    border-left: solid;
+
 }
