--- a/src/screens/Annonces/annonces.css
+++ b/src/screens/Annonces/annonces.css
@@ -16,7 +16,7 @@
 
 /* PARTIE : input de recherche géneral*/
 .div_recherche{
-    height: 75px;
+    height: 100px;
     min-width: 990px;
     display: flex;
     padding-left: 20px;
@@ -50,7 +50,7 @@
     display: inline-block;
     height: 40px;
     width: 90px;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 20px;
     border: none;
 }
@@ -58,20 +58,20 @@
 .titre_Recherche{
     color: #FF8802;
     margin-top: 20px;
-    padding-top: 5px;
-    height: 42px;
+    padding-top: 10px;
+    height: 57px;
     width: 300px;
     padding-left: 10px;
     display: flex;
     border: 1px solid #ccc;
     box-sizing: border-box;
     box-shadow: 2px 0 10px 0 #63B7E7, 0 2px 2px 0 #63B7E7;
-    border-radius: 0px 0px 0px 0;
+    margin-right: 30px;
 }
 .titre_depart{
     color: #FF8802;
-    height: 42px;
-    width: 225px;
+    height: 57px;
+    width: 275px;
     margin-top: 20px;
     padding-top: 5px;
     padding-left: 7px;
@@ -84,8 +84,8 @@
 
 .titre_arrive{
     color: #FF8802;
-    height: 42px;
-    width: 225px;
+    height: 57px;
+    width: 275px;
     margin-top: 20px;
     padding-top: 5px;
     padding-left: 5px;
@@ -100,54 +100,63 @@
     border-radius:  5px 0px 0px 5px;
 }
 
-.div_recherche .input_recherche{
-    width: 250px;
+/* input bar de recherche */
+
+.input_recherche{
+    width: 240px;
     border-radius: 0px 0px 0px 0px;
+    margin-left: 15px;
+    margin-top: 0px;
     box-shadow: none;
     border: none;
-    margin: 0px 0px;
 }
-.div_recherche .input_départ {
+.input_départ {
     width: 150px;
     border-radius: 0px 0px 0px 0px;
     box-shadow: none;
     border: none;
-    margin: 0px 0px;
+    margin-left: 15px;
+    margin-top: 0px;
 }
 
-.div_recherche .input_arrivé {
+.input_arrivé {
     width: 150px;
     border-radius: 0px 0px 0px 0px;
     box-shadow: none;
     border: none;
-    margin: 0px 0px;
+    margin-left: 15px;
+    margin-top: 0px;
 }
 
 .div_recherche .input_recherche:focus{
     outline: none;
     box-shadow: none;
-    margin: 0px 0px;
+    margin-left: 15px;
 }
+
+/* input sélectionné */
 
 .div_recherche .b_type_voyage:focus{
     outline: none;
     padding: 10px ;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 25px;
+    margin-top: 35px;
     display: inline-block;
 }
 
 .div_recherche .input_arrivé:focus{
     outline: none;
     box-shadow: none;
-    margin: 0px 0px;
+    margin-left: 15px;
+    margin-top: 0px;
 }
 
 .div_recherche .input_départ:focus{
     outline: none;
     box-shadow: none;
-    margin: 0px 0px;
+    margin-left: 15px;
+    margin-top: 0px;
 }
 /* PARTIE : reste de la page */
 .div_annonces_produit{
