--- a/src/screens/Connexion/connexion.css
+++ b/src/screens/Connexion/connexion.css
@@ -8,7 +8,7 @@
     height: 40%;
     margin: auto;
     position: relative;
-    top: 30%;
+    top: 200px;
     display: block;
 }
 
@@ -29,6 +29,18 @@
 
 .container_form input{
     width: 100%;
+}
+
+#inscription_de_co{
+    margin-left: 44%;
+    margin-top: 300px;
+    width: 150px;
+}
+
+#bouton_valider_co{
+    margin-left: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
