--- a/src/Components/navBar/navbar.css
+++ b/src/Components/navBar/navbar.css
@@ -107,7 +107,7 @@
     color: black;
 }
 .arriere_plan_annonces_appuyé{
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 .dropdown-content-1{
     display: none;
@@ -118,14 +118,15 @@
     margin: 0;
     color:black;
 }
-.dropdown-content-1 button {
+
+
+.dropdown-content-1 p {
     text-align: left;
     color:black;
     text-decoration: none;
     background: white;
-    margin-top: 7px;
-    margin-bottom: 0px;
-    height: 30px;
+    margin-bottom: 8px;
+    height: 17px;
     width: 100%;
 }
 
