--- a/src/Components/components_annonces/description_annonces.css
+++ b/src/Components/components_annonces/description_annonces.css
@@ -9,6 +9,18 @@
     font-size: large;
     line-height: 5px;
 }
+
+#titre:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    color: #FFAA5E;
+}
+
+#titre:active{
+    color: #ff973c;
+}
+
+
 .text_lieu{
     line-height: 1px;
 }
