--- a/src/screens/DetailAnnonce/detailAnnonce.css
+++ b/src/screens/DetailAnnonce/detailAnnonce.css
@@ -220,6 +220,19 @@
     margin-bottom: 5px;
 }
 
+#spanNom:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+#spanNom:active{
+    color: #3A5984;
+}
+
+#spanImageDetail{
+    height: 10px;
+}
+
 .div_photo{
     width: 100%;
     height: 100%;
