ca avance mais ptn l'API DE MERDE

--- a/src/Components/components_achats_voyages/contrepartie.css
+++ b/src/Components/components_achats_voyages/contrepartie.css
@@ -24,9 +24,10 @@
     width: 30px;
     background-color: #035583;
 }
-.prixContrepartie{
+.prixContrepartieMesAnnonces{
     margin-left: 15px;
     line-height: 0px;
+    margin-bottom: 34px;
 }
 .logo1{
     margin-right: 10px;
