--- a/src/screens/Connexion/connexion.css
+++ b/src/screens/Connexion/connexion.css
@@ -43,4 +43,25 @@
     margin-bottom: 10px;
 }
 
+.mdpRate{
+    box-shadow: 0 0 6px 0 #ec4040, 0 2px 2px 0 #ec4040; 
+    animation: shake 0.4s linear ;
+}
 
+  @keyframes shake {
+    0% { transform: translateX(0); }
+    10% { transform: translateX(5px); }
+    20% { transform: translateX(-5px); }
+    30% { transform: translateX(5px); }
+    40% { transform: translateX(-5px); }
+    50% { transform: translateX(5px); }
+    60% { transform: translateX(-5px); }
+    70% { transform: translateX(5px); }
+    80% { transform: translateX(-5px); }
+    90% { transform: translateX(5px); }
+    100% { transform: translateX(0); }
+  }
+  
+  .error-element {
+    animation: shake 0.5s linear;
+  }
