--- a/src/screens/Connexion/connexion.css
+++ b/src/screens/Connexion/connexion.css
@@ -31,13 +31,13 @@
 }
 
 .container_form h1 {
-    width: 45%;
+    width: 170px;
     margin: auto;
     padding-bottom: 10px;
 }
 
 #formConnexion_admin h1 {
-    width: 80%;
+    width: 290px;
     margin: auto;
     padding-bottom: 10px;
 }
