--- a/src/screens/Annonces/annonces.css
+++ b/src/screens/Annonces/annonces.css
@@ -38,6 +38,16 @@
     display: flex;
 }
 
+.button_submit_annonces{
+    margin-top: 25px;
+    margin-left: 30px;
+    padding-top: 5px;
+    height: 57px;
+    width: 200px;
+    min-width: 200px;
+    padding-left: 10px;
+}
+
 .p_titre{
     margin-top: 3px;
 }
@@ -52,6 +62,7 @@
     margin-left: 15px;
     margin-top: 0px;
 }
+
 
 .div_recherche .input_annonces:focus{
     border: none;
