--- a/src/Components/components_mon_annonce/produit_mon_annonce.css
+++ b/src/Components/components_mon_annonce/produit_mon_annonce.css
@@ -38,10 +38,10 @@
 
 .PhotoProfilComponentProduit{
     border-radius: 100%;
-    border: solid;
-    padding: 5px;
-    height: 10px;
-    width: 10px;
+    padding: 5px
+    ;
+    height: 20px;
+    width: 20px;
     margin-right: 5px;
 }
 
@@ -55,6 +55,7 @@
 
 .nomPrenom{
     margin-bottom: 5px;
+    font-size: x-small;
 }
 
 .logo_lieu_vente{
