--- a/src/Components/components_achats_voyages/contrepartie.css
+++ b/src/Components/components_achats_voyages/contrepartie.css
@@ -28,6 +28,8 @@
     margin-left: 15px;
     line-height: 0px;
     margin-bottom: 34px;
+    font-size: 18px;
+    padding-top: 0;
 }
 .logo1{
     margin-right: 10px;
