--- a/src/Components/navBar/navbar.css
+++ b/src/Components/navBar/navbar.css
@@ -2,7 +2,7 @@
 .bar {
     height: 70px;
     min-width: 620px;
-    background-color: #3B9DD3;
+    background-color: #4BA7CD;
     align-items: center;
     position: relative;
     display: flex;
