--- a/src/Components/AvancementCreationAnnonce/avancementCreationAnnonce.css
+++ b/src/Components/AvancementCreationAnnonce/avancementCreationAnnonce.css
@@ -1,6 +1,7 @@
 .wrapperGeneralAvancement {
     background-color: #ffc583;
-    padding: 10%;
+    padding: 2%;
+    padding-left: 4%;
     height: 100vh;
 }
 
@@ -24,11 +25,11 @@
 }
 
 .buttonAvancement {
-    border-radius: 9999px;
+    border-radius: 90999px;
     background-color: white;
     border: solid #FF8802;
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     margin-right: 10px;
     margin-top: 30px;
     box-shadow: 5px black;
