--- a/src/Components/AvancementCreationAnnonce/avancementCreationAnnonce.css
+++ b/src/Components/AvancementCreationAnnonce/avancementCreationAnnonce.css
@@ -12,12 +12,25 @@
 }
 
 #etape1 {
-
     margin-top: 200px;
+}
+
+#etape1 span{
+    margin-top: 9px;
 }
 
 #etape2 {
     margin-top: 15px;
+}
+
+#etape2 button  {
+    height: 35px;
+    min-width: 35px;
+}
+
+#etape3 button{
+    height: 35px;
+    min-width: 35px;
 }
 
 #etape3 {
@@ -28,15 +41,16 @@
     border-radius: 90999px;
     background-color: white;
     border: solid #FF8802;
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     margin-right: 10px;
     margin-top: 30px;
     box-shadow: 5px black;
+    padding: 0;
 }
-
+/*
 .buttonAvancement2 {
-    border-radius: 9999px;
+    border-radius: 90999px;
     background-color: white;
     border: solid #FF8802;
     height: 20px;
@@ -45,7 +59,7 @@
     margin-top: 30px;
     padding: 0;
     box-shadow: 5px black;
-}
+}*/
 
 .logoAvancementGood {
     color: #FF8802;
@@ -53,12 +67,13 @@
     border-radius: 999999px;
 }
 
+/*
 .logoAvancementGood2 {
     width: 100%;
     height: 100%;
     color: #FF8802;
     margin: 0;
-}
+}*/
 
 .icon3points {
     color: #FF8802;
@@ -68,10 +83,10 @@
     color: #FF8802;
     padding: 0;
     padding-bottom: 10px;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 #etape2 .troisPoints {
-    width: 20px;
-    padding: 0 5px;
+    /*width: 20px;*/
+    /*padding: 0 5px;*/
 }
