--- a/src/Components/AvancementCreationAnnonce/avancementCreationAnnonce.css
+++ b/src/Components/AvancementCreationAnnonce/avancementCreationAnnonce.css
@@ -11,6 +11,10 @@
     display: flex;
 }
 
+.wrapperAvancement button {
+    cursor: default;
+}
+
 #etape1 {
     margin-top: 200px;
 }
@@ -20,12 +24,16 @@
 }
 
 #etape2 {
-    margin-top: 15px;
+    margin-top: 38px;
 }
 
 #etape2 button  {
     height: 35px;
     min-width: 35px;
+}
+
+#etape2 span{
+    margin-top: 9px;
 }
 
 #etape3 button{
@@ -34,7 +42,7 @@
 }
 
 #etape3 {
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .buttonAvancement {
@@ -65,6 +73,10 @@
     color: #FF8802;
     background-color: white;
     border-radius: 999999px;
+    height: 35px;
+    width: 35px;
+    min-width: 35px;
+    font-size: 35px;
 }
 
 /*
